[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gfx/items/door-1.png" type="Texture" id=1]
[ext_resource path="res://assets/sfx/door-close-1.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/door-open-1.ogg" type="AudioStream" id=3]
[ext_resource path="res://src/items/Door.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 42 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 10 )

[sub_resource type="OccluderPolygon2D" id=3]
closed = false
polygon = PoolVector2Array( -32.2045, -9.54957, 32.315, -9.54957, 32.2306, 9.78939, -32.3734, 9.70494 )

[sub_resource type="Animation" id=4]
resource_name = "open-close"
length = 4.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, 0 ), Vector2( -64, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OpenSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CloseSFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Door" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D"]
visible = false
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
occluder = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open-close = SubResource( 4 )

[node name="OpenSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="CloseSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
